--- a/rollup/core/classes/RollupEvaluator.cls
+++ b/rollup/core/classes/RollupEvaluator.cls
@@ -4,6 +4,10 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
   private static final String FALSE_VAL = 'false';
   private static final Set<String> POLYMORPHIC_FIELDS = new Set<String>{ 'Owner', 'Type' };
   private static final AlwaysTrueEvaluator ALWAYS_TRUE_SINGLETON = new AlwaysTrueEvaluator();
+  @TestVisible
+  static String stubRequestId;
+
+  private static final Map<String, WhereFieldEvaluator> CACHED_WHERE_EVALS = new Map<String, WhereFieldEvaluator>();
 
   // totally not obvious ranking going on here - it's absolutely imperative that
   // the two-word conditions go first; otherwise replacing will fail on the whole string
@@ -33,8 +37,6 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
     }
     private set;
   }
-
-  private static Map<String, WhereFieldEvaluator> CACHED_WHERE_EVALS = new Map<String, WhereFieldEvaluator>();
 
   public abstract Boolean matches(Object calcItem);
 
@@ -166,7 +168,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
       this.whereClause = whereClause;
       this.createConditions(calcItemSObjectType);
       this.validRelationshipNames = this.getValidRelationshipNames(calcItemSObjectType);
-      RollupLogger.Instance.log('Where clause for eval: ' + this.whereClause, LoggingLevel.FINER);
+      RollupLogger.Instance.log('where clause for eval: ' + this.whereClause, LoggingLevel.FINER);
     }
 
     public override String toString() {
@@ -430,7 +432,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
     }
 
     private void logError(Exception ex) {
-      RollupLogger.Instance.log('an error occurred in RollupEvaluator: ', ex, LoggingLevel.ERROR);
+      RollupLogger.Instance.log('an error occurred in RollupEvaluator:', ex, LoggingLevel.ERROR);
     }
   }
 
@@ -440,6 +442,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
       this.innerConditions = innerConditions;
     }
 
+    @SuppressWarnings('PMD.OverrideBothEqualsAndHashCode')
     public Boolean equals(Object calcItem) {
       return this.conditionallyEquals(calcItem);
     }
@@ -532,6 +535,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
       }
     }
 
+    @SuppressWarnings('PMD.OverrideBothEqualsAndHashCode, PMD.EmptyIfStmt')
     public Boolean equals(Object o) {
       SObject item = (SObject) o;
       Boolean isEqual = true;
@@ -766,8 +770,6 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
     RollupLogger.Instance.log(clazz + '\nmatches? ' + matches + ' for: ' + item, logLevel);
   }
 
-  @TestVisible
-  static String stubRequestId;
   private static String getCurrentTransactionId() {
     return stubRequestId != null ? stubRequestId : Request.getCurrent().getRequestId();
   }
