--- a/extra-tests/classes/RollupIntegrationTests.cls
+++ b/extra-tests/classes/RollupIntegrationTests.cls
@@ -1042,6 +1042,66 @@ private class RollupIntegrationTests {
   }
 
   @IsTest
+  static void shouldNotBlowUpIfSomeMergeMetadataHasNoMatchingRecords() {
+    Account parent = [SELECT Id, Name FROM Account];
+
+    // this test relies on AccountTrigger.trigger having AFTER DELETE set up
+    Rollup.rollupMetadata = new List<Rollup__mdt>{
+      new Rollup__mdt(
+        CalcItem__c = 'ContactPointAddress',
+        RollupFieldOnCalcItem__c = 'PreferenceRank',
+        LookupObject__c = 'Account',
+        LookupFieldOnCalcItem__c = 'ParentId',
+        LookupFieldOnLookupObject__c = 'Id',
+        RollupFieldOnLookupObject__c = 'AnnualRevenue',
+        RollupOperation__c = 'MAX',
+        // validate calc item where clause works
+        CalcItemWhereClause__c = 'Parent.Name = \'' + parent.Name + '\''
+      ),
+      new Rollup__mdt(
+        CalcItem__c = 'ContactPointAddress',
+        RollupFieldOnCalcItem__c = 'Name',
+        LookupObject__c = 'Account',
+        LookupFieldOnCalcItem__c = 'ParentId',
+        LookupFieldOnLookupObject__c = 'Id',
+        RollupFieldOnLookupObject__c = 'Description',
+        RollupOperation__c = 'CONCAT'
+      ),
+      // should be filtered out
+      new Rollup__mdt(
+        CalcItem__c = 'Event',
+        RollupFieldOnCalcItem__c = 'Subject',
+        LookupObject__c = 'Account',
+        LookupFieldOnCalcItem__c = 'WhatId',
+        LookupFieldOnLookupObject__c = 'Id',
+        RollupFieldOnLookupObject__c = 'NumberOfEmployees',
+        RollupOperation__c = 'COUNT'
+      )
+    };
+
+    // you can only merge contacts / accounts / leads / cases
+    Account parentToMerge = new Account(Name = 'Second parent');
+    insert parentToMerge;
+
+    List<ContactPointAddress> rollupChildren = new List<ContactPointAddress>{
+      new ContactPointAddress(Name = 'Child one', ParentId = parent.Id, PreferenceRank = 1),
+      new ContactPointAddress(Name = 'Child two', ParentId = parentToMerge.Id, PreferenceRank = 2)
+    };
+
+    // we don't even need the parent account's annual revenue to be set; rather
+    // we need to validate that post merge, the rollup is recalculated correctly
+    insert rollupChildren;
+
+    Test.startTest();
+    Database.merge(parent, parentToMerge.Id, true);
+    Test.stopTest();
+
+    parent = [SELECT Id, Description, AnnualRevenue FROM Account WHERE Id = :parent.Id];
+    System.assertEquals(2, parent.AnnualRevenue, 'Merge should have triggered rollup');
+    System.assertEquals(rollupChildren[0].Name + ', ' + rollupChildren[1].Name, parent.Description, 'Second rollup should also have run');
+  }
+
+  @IsTest
   static void shouldNotCrashForFalseMergePositive() {
     Account acc = [SELECT Id, Name, Description, AnnualRevenue FROM Account];
 
@@ -1183,7 +1243,7 @@ private class RollupIntegrationTests {
     Account updatedAcc = [SELECT AnnualRevenue FROM Account];
     System.assertEquals(null, updatedAcc.AnnualRevenue, 'COUNT_DISTINCT should ignore nulls');
 
-    Rollup.defaultControl = new RollupControl__mdt(ShouldRunAs__c = RollupMetaPicklists.ShouldRunAs.SYNCHRONOUS);
+    Rollup.defaultControl = new RollupControl__mdt(ShouldRunAs__c = RollupMetaPicklists.ShouldRunAs.Synchronous);
     Rollup.apexContext = TriggerOperation.AFTER_UPDATE;
     Rollup.records = new List<ContactPointAddress>{ cpa };
     Rollup.oldRecordsMap = new Map<Id, SObject>{ cpa.Id => new ContactPointAddress(PreferenceRank = 10) };
