--- a/rollup/core/classes/RollupMetaPicklists.cls
+++ b/rollup/core/classes/RollupMetaPicklists.cls
@@ -1,6 +1,8 @@
 public virtual without sharing class RollupMetaPicklists {
   private final Set<String> validValues;
 
+  public static final ShouldRunAs ShouldRunAs = new ShouldRunAs();
+
   private RollupMetaPicklists(Schema.SObjectField fieldToken) {
     this.validValues = new Set<String>();
 
@@ -9,8 +11,6 @@ public virtual without sharing class RollupMetaPicklists {
       this.validValues.add(entry.getValue());
     }
   }
-
-  public static final ShouldRunAs ShouldRunAs = new ShouldRunAs();
 
   protected String validate(String val) {
     if (this.validValues.contains(val) == false) {
@@ -24,19 +24,19 @@ public virtual without sharing class RollupMetaPicklists {
       super(RollupControl__mdt.ShouldRunAs__c);
     }
 
-    public String SYNCHRONOUS {
+    public String Synchronous {
       get {
         return this.validate('Synchronous Rollup');
       }
     }
 
-    public String BATCHABLE {
+    public String Batchable {
       get {
         return this.validate('Batchable');
       }
     }
 
-    public String QUEUEABLE {
+    public String Queueable {
       get {
         return this.validate('Queueable');
       }
